# fastapi-2fa-auth

./: .gitignore  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 468d20bb4ae7_create_tables.py
src/: config.py  main.py
src/api/: responses.py
src/app/: dependencies.py
src/app/admin/: router.py  schemas.py  service.py
src/app/auth/: router.py  schemas.py  service.py
src/app/middleware/: exception_handler.py  rate_limiter.py  request_context.py
src/app/profile/: router.py  schemas.py  service.py
src/core/: constants.py  exceptions.py  protocols.py  security.py
src/domain/: entities.py
